# autogen-courses

./: .devcontainer.json  .env.example  .gitignore  Dockerfile  pyproject.toml
src/agent-chat-course-deeplearningai/: L1_multi_agent_conversation.ipynb  L3_nested_chats.ipynb  L5_code_execution.ipynb
src/autogen-core-examples/: 01_quickstart.ipynb  02_concurrent_agents.ipynb  03_sequential_workflow.ipynb  04_reflection_with_critic.ipynb  05_text_to_sql.ipynb
src/deep_learning_ai_course/: L2_sequential_chats.ipynb  L4_tool_use.ipynb  L5_code_execution.ipynb
src/deep_learning_ai_course/coding/: ytd_stock_gains.py
