[project]
name = "autogen-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2>=0.8.2",
    "autogen-core>=0.4.9.2",
    "autogen-ext>=0.4.9.2",
    "chess>=1.11.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.67.0",
    "pandas>=2.2.3",
    "pyautogen>=0.8.2",
    "yfinance>=0.2.54",
]
